force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Local_Income_Taxes_Withheld__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Local_Income_Taxes_Withheld__c</fullName>
    <description>This field is optional. It specifies any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</description>
    <inlineHelpText>Any additional dollar amount (not percentage) of local income taxes to be withheld from the distribution subtotal.</inlineHelpText>
    <label>Local Income Taxes Withheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>