force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__New_Election_Of_Payment_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__New_Election_Of_Payment_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA, it is the owner making a new election of payment.</description>
    <inlineHelpText>If true the beneficiary is making a new election of payment. In the case of a formally established beneficiary IRA it is the owner making a new election of payment.</inlineHelpText>
    <label>New Election of Payment Indicator</label>
    <type>Checkbox</type>
</CustomField>