force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Payee_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payee_Type__c</fullName>
    <description>Users manually populate this optional picklist to identify the payee type for the disbursement. By default, this field is blank.</description>
    <inlineHelpText>Select the payee type for the disbursement.</inlineHelpText>
    <label>Payee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Public Official</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>