force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Percent_Budget_Requested__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Budget_Requested__c</fullName>
    <description>This field is optional. It is a formula field that calculates the percent of the total budget amount being requested.</description>
    <formula>LLC_BI__Amount_Requested__c  /  LLC_BI__Loan__r.LLC_BI__Budget__r.LLC_BI__Total_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Budget Requested</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>