force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Percent_Funded__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Funded__c</fullName>
    <description>This field is optional. It is a formula field that calculates the percentage of the requested amount that has been approved for funding.</description>
    <formula>LLC_BI__Amount_Funded__c  /  LLC_BI__Amount_Requested__c</formula>
    <label>Percent Funded</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>