force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requested_Date__c</fullName>
    <description>This field is optional. It is the request date of the transaction request.</description>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>