force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__RMD_Has_Been_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RMD_Has_Been_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the required minimum distribution (RMD) has been satisfied for the distribution year.</description>
    <inlineHelpText>If true the required minimum distribution (RMD) has been satisfied for the distribution year.</inlineHelpText>
    <label>RMD Has Been Satisfied</label>
    <type>Checkbox</type>
</CustomField>