force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_IRA_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_IRA_Contribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the IRA Contribution Type.</description>
    <inlineHelpText>The IRA Contribution Type</inlineHelpText>
    <label>Roth IRA Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular (including Catch-Up)</fullName>
            </value>
            <value>
                <fullName>Rollover</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Recharacterization</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
            </value>
            <value>
                <fullName>Qualified Reservist/Designated Disaster Distribution Repayment</fullName>
            </value>
            <value>
                <fullName>Disaster/Combat Zone Postponed Contribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>