force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_IRA_Transfer_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_IRA_Transfer_Source__c</fullName>
    <description>This field is optional. It is a picklist that specifies the source of funds for a transfer or conversion to a Roth IRA.</description>
    <inlineHelpText>Specifies the source of funds for a transfer or conversion to a Roth IRA.</inlineHelpText>
    <label>Roth IRA Transfer Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roth</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>