force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_Rollover_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_Rollover_Source_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the source of funds for a direct rollover to a Roth IRA.</description>
    <inlineHelpText>Specifies the source of funds for a direct rollover to a Roth IRA.</inlineHelpText>
    <label>Roth Rollover Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Designated Roth Account</fullName>
            </value>
            <value>
                <fullName>Eligible Retirement Plan (other than a Designated Roth Account)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>