force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Ten_Pct_Federal_Withholding_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ten_Pct_Federal_Withholding_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. If true, the IRA owner elects to have 10% federal income tax withheld from the IRA distribution.</description>
    <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from the IRA distribution.</inlineHelpText>
    <label>10% Federal Withholding Indicator</label>
    <type>Checkbox</type>
</CustomField>