force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Traditional_Benficiary_IRA_Contribution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Traditional_Benficiary_IRA_Contribution__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of contribution for a Traditional Beneficiary IRA.</description>
    <inlineHelpText>Specifies the type of contribution for a Traditional Beneficiary IRA.</inlineHelpText>
    <label>Trad Benficiary IRA Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transfer from an IRA</fullName>
            </value>
            <value>
                <fullName>Direct Rollover from an Eligible Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Recharacterization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>