force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Traditional_IRA_Contribution_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Traditional_IRA_Contribution_Source__c</fullName>
    <description>This field is optional. It is a picklist that specifies the source for the rollover to a Traditional IRA.</description>
    <inlineHelpText>Specifies the source for the rollover to a Traditional IRA.</inlineHelpText>
    <label>Traditional IRA Contribution Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional IRA</fullName>
            </value>
            <value>
                <fullName>Qualified Plan</fullName>
            </value>
            <value>
                <fullName>Tax-Sheltered Annuity (TSA)</fullName>
            </value>
            <value>
                <fullName>457(b)</fullName>
            </value>
            <value>
                <fullName>SIMPLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>