force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Traditional_IRA_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Traditional_IRA_Distribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of distribution for a Traditional or Simple IRA.</description>
    <inlineHelpText>Specifies the type of distribution for a Traditional or Simple IRA.</inlineHelpText>
    <label>Traditional IRA Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Distribution no known exception</fullName>
            </value>
            <value>
                <fullName>Early Distribution IRS Levy or other exception</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Prohibited Transaction</fullName>
            </value>
            <value>
                <fullName>Revocation</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Direct Rollover to an employer-sponsored Eligible Retirement Plan</fullName>
            </value>
            <value>
                <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in year after excess contribution but by my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
            </value>
            <value>
                <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA Distribution During Two-Year Period</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Transfer to another IRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>