force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Transaction_Request_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Transaction_Request_Aggregate__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional field to indicate the transaction request aggregate associated with the transaction request. By default this field is blank.</description>
    <inlineHelpText>This system-populated field indicates the transaction request aggregate associated with the transaction request.</inlineHelpText>
    <label>Transaction Request Aggregate</label>
    <referenceTo>LLC_BI__Transaction_Request_Aggregate__c</referenceTo>
    <relationshipLabel>Transaction Requests</relationshipLabel>
    <relationshipName>Transaction_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>