force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of transaction request.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Contribution</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>